--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -136,6 +136,8 @@ body{
 }
 #results-box{
     width:100%;
+    height: 545px;
+    overflow-y: scroll;
 }
 #results-box .card{
     margin-bottom:10px;
