--- a/grasa_event_locator/templates/search/search.html
+++ b/grasa_event_locator/templates/search/search.html
@@ -1,12 +1,83 @@
 {% include "header.php" %}
 <!-- Homepage -->
 
-<div class="container home-container">
+<div class="home-container">
     <form method="get" action=".">
-    <div class="row">
-    <!-- most outer row-->
-        <div class="col-sm-3 filter-col">
-        <!-- Filter column-->
+        <div class="row">
+            <div class="col-md-6 search-col-fix">
+                <!-- search results column-->
+                <div class="row search-row"><!-- search bar row-->
+                    <div class="filter-alert alert alert-danger alert-dismissible fade show w-100" role="alert">
+                      Filters Cleared
+                    </div>
+                    <div class="input-group mb-3 search-bar">
+                      {{ form.q }}
+                      <div class="input-group-append">
+                        <button class="btn btn-outline-secondary searchBtn" type="submit" id="button-addon2" aria-label="Search" value="Search"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
+                          <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#filterModal" id="filterBtnSmall"><i class="fa fa-filter" aria-hidden="true"></i> Filter</button>
+                      </div>
+                    </div>
+                    
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <button type="button" class="btn btn-primary w-100" data-toggle="modal" data-target="#filterModal" id="filterBtnBig">
+                        <i class="fa fa-filter" aria-hidden="true"></i> Filter</button>
+                        <div class="btn-group w-100" id="viewBtns" role="group" >
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal" id="viewResults">View Results</button>  
+                            <button type="button" class="btn btn-outline-secondary" data-dismiss="modal" id="viewMap">View Map</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                <!-- Search Results Row-->
+                    <div id="results-box">
+                    {% for result in object_list %}
+                        <a href="{% url 'event_page' result.object.id %}"> 
+                        <div class="card w-100 event-box">
+                          <div class="card-body row">
+                            <div class="col-lg-6">
+                                <h5 class="card-title">{{ result.object.title }}</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">{{ result.object.user_id.org_name }}</h6>
+                            </div>
+                            <div class="col-lg-6 right-info">
+                                    <!--Merged from index, makes only activity categories show-->
+                                <div class="activities-badges mb-2">
+                                    {% for t in result.object.categories.all %}
+                                        {% if t.id <= 18 %}
+                                            <span class="badge badge-info">
+                                            {{ t }}
+                                            </span>
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
+                                <h6 class="card-subtitle mb-2 text-muted"><i class="fa fa-map-marker" aria-hidden="true"></i> {{ result.object.address }}</h6>
+                            </div>
+                          </div>
+                        </div>
+                        </a>   
+                    {% endfor %}
+                    </div>
+
+                </div>
+                </div>
+            <div class="col-md-6">
+            <!-- map column-->
+                <div id="mapid"></div>
+            </div>
+        </div> <!-- main row-->
+
+        <!--Filter Modal-->
+        <div class="modal fade" id="filterModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Search Filters</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
             <div class="accordion" id="accordionExample">
                 <div class="card">
                     <div class="card-header" id="headingActivity">
@@ -73,69 +144,17 @@
                     </div>
                 </div>
             </div>
-            
-            
-            
-            <div class="row filter-btn-row">
-            <!-- button row-->
-                <div class="col-12">
-                    <div class="filter-alert alert alert-danger alert-dismissible fade show" role="alert">
-                      Filters Cleared
-                    </div>
+          </div>
+          <div class="modal-footer">
+            <div class="btn-group col-12" role="group" >
+                    <button type="button" class="btn btn-outline-danger" id="clearFilters" data-dismiss="modal">Clear Filters</button>  
+                    <button type="button" class="btn btn-outline-success" data-dismiss="modal">Apply Filters</button>
                 </div>
-                <div class="btn-group col-12" role="group" aria-label="Basic example">
-                  <button type="button" class="btn btn-secondary btn-outline-success">Apply Filters</button>
-                  <button type="button" class="btn btn-secondary btn-outline-danger" id="clearFilters">Clear Filters</button>
-                </div>
-            </div>
+          </div>
         </div>
-        <div class="col-sm-9">
-        <!-- search results column-->
-            <div class="row">
-            <!-- search bar row-->
-                <div class="input-group mb-3 search-bar">
-                
-                  {{ form.q }}
-                  <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="submit" id="button-addon2" aria-label="Search" value="Search"><i class="fa fa-search" aria-hidden="true"></i></button>
-                  </div>
-                </div>
-            </div>
-            <div class="row">
-            <!-- Search Results Row-->
-                <div id="results-box">
-                {% for result in object_list %}
-                    <a href="{% url 'event_page' result.object.id %}"> <div class="card w-100 event-box">
-                      <div class="card-body row">
-                        <div class="col-sm-6">
-                            <h5 class="card-title">{{ result.object.title }}</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">{{ result.object.user_id.org_name }}</h6>
-                        </div>
-                        <div class="col-sm-6 right-info">
-                                {% for t in result.object.categories.all %}
-                                    <!--Merged from index, makes only activity categories show-->
-                                    {% if t.id <= 18 %}
-                                        <span class="badge badge-info card-title">
-                                        {{ t }}
-                                        </span>
-                                    {% endif %}
-                                {% endfor %}
-                            <h6 class="card-subtitle mb-2 text-muted"><i class="fa fa-map-marker" aria-hidden="true"></i> {{ result.object.address }}</h6>
-                        </div>
-                      </div>
-                    </div>
-                    </a>
-                {% endfor %}
-                </div>
-                
-            </div>
-        </div>
+      </div>
     </div>
     </form>
-    <div class="row">
-    <!-- map row-->
-        <div id="mapid"></div>
-    </div>
 </div>
 <!--Leaflet JS-->
 <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
@@ -166,33 +185,46 @@
         }, 2000);
     }
     
+    //View Buttons on Mobile
+    document.getElementById('viewMap').onclick = function(){
+        $("#viewMap").removeClass("btn-outline-secondary").addClass("btn-secondary");
+        $("#viewResults").removeClass("btn-secondary").addClass("btn-outline-secondary");
+        $("#results-box").css('visibility', 'hidden');
+        $("#results-box").css('height', '0px');
+        $("#mapid").css('visibility', 'visible');
+        $("#mapid").css('height', '600px');
+    }
+    
+    document.getElementById('viewResults').onclick = function(){
+         $("#viewResults").removeClass("btn-outline-secondary").addClass("btn-secondary");
+        $("#viewMap").removeClass("btn-secondary").addClass("btn-outline-secondary");
+        $("#mapid").css('visibility', 'hidden');
+        $("#mapid").css('height', '0px');
+        $("#results-box").css('visibility', 'visible');
+        $("#results-box").css('height', '600px');
+    }
+    
 
     //Leaflet Code
     //init
-    var mymap = L.map('mapid').setView([43.0846, -77.6743], 13);
-    L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
-        attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-        maxZoom: 18,
-        id: 'mapbox.streets',
-        accessToken: 'sk.eyJ1IjoibGRpZG9uYXRvIiwiYSI6ImNrMTdzdmN4YTFqODgzbnBrOHB4ZzJ1dzQifQ.T7D-X5eab-y3J-KIu_WTBw'
-    }).addTo(mymap);
+    function initMap(){
+        var mymap = L.map('mapid').setView([43.0846, -77.6743], 13);
+        L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
+            attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+            maxZoom: 18,
+            id: 'mapbox.streets',
+            accessToken: 'sk.eyJ1IjoibGRpZG9uYXRvIiwiYSI6ImNrMTdzdmN4YTFqODgzbnBrOHB4ZzJ1dzQifQ.T7D-X5eab-y3J-KIu_WTBw'
+        }).addTo(mymap);
 
-    //markers
-    //testing colors https://github.com/pointhi/leaflet-color-markers
-    var greenIcon = new L.Icon({
-      iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png',
-      shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
-      iconSize: [25, 41],
-      iconAnchor: [12, 41],
-      popupAnchor: [1, -34],
-      shadowSize: [41, 41]
-    });
+        //markers
 
-    //Merged from index, plots all events on map
-    {% for lat, lng, html_string in zip_table %}
-    var marker = L.marker([{{ lat }},  {{ lng }}]).addTo(mymap);
-    marker.bindPopup("<div class='leafeventPopup'>{{ html_string | safe }}</div>").openPopup();
-    {% endfor %}
+        //Merged from index, plots all events on map
+        {% for lat, lng, html_string in zip_table %}
+        var marker = L.marker([{{ lat }},  {{ lng }}]).addTo(mymap);
+        marker.bindPopup("<div class='leafeventPopup'>{{ html_string | safe }}</div>").openPopup();
+        {% endfor %}
+    }
+    initMap();
 
 </script>
 {% include "footer.php" %}
