--- a/grasa_event_locator/templates/search/search.html
+++ b/grasa_event_locator/templates/search/search.html
@@ -115,16 +115,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <!-- <div class="card">
                     <div class="card-header" id="headingDistance">
                         <h2 class="mb-0"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseDistance" aria-expanded="true" aria="" controls="collapseDistance">Distance</button></h2></div>
                     <div id="collapseDistance" class="collapse" data-parent="#accordionExample">
                         <div class="card-body">
                             <input class="form-control form-control-sm distance-input" type="text" placeholder="From Address...">
-                            <!--put distance here-->
+                            <!-/-put distance here-/->
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="card">
                     <div class="card-header" id="headingFees">
                         <h2 class="mb-0"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFees" aria-expanded="true" aria="" controls="collapseFees">Fees</button></h2></div>
