--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -45,7 +45,7 @@ body{
 }
 /*Leaflet Map Styles*/
 #mapid{
-    height: 500px; 
+    height: 74vh; 
     width: 100%; 
 }
 
@@ -136,7 +136,7 @@ body{
 }
 #results-box{
     width:100%;
-    height: 445px;
+    height: 67vh;
     overflow-y: scroll;
 }
 #results-box .card{
